2007-08-08  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_profile_doctest.py (main): fix prompt to
	introduce a blank line between inputs, to conform to doctest
	requirements.

	* IPython/OInspect.py (Inspector.pinfo): fix another part where
	auto-generated docstrings for new-style classes were showing up.

2007-08-07  Fernando Perez  <Fernando.Perez@colorado.edu>

	* api_changes: Add new file to track backward-incompatible
	user-visible changes.

2007-08-06  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: fix bug where user_config_ns didn't exist at all
	before all the config files were handled.

2007-08-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (RunnerFactory): Add new factory class for
	creating reusable runners based on filenames.

	* IPython/Extensions/ipy_profile_doctest.py: New profile for
	doctest support.  It sets prompts/exceptions as similar to
	standard Python as possible, so that ipython sessions in this
	profile can be easily pasted as doctests with minimal
	modifications.  It also enables pasting of doctests from external
	sources (even if they have leading whitespace), so that you can
	rerun doctests from existing sources.

	* IPython/iplib.py (_prefilter): fix a buglet where after entering
	some whitespace, the prompt would become a continuation prompt
	with no way of exiting it other than Ctrl-C.  This fix brings us
	into conformity with how the default python prompt works.

	* IPython/Extensions/InterpreterPasteInput.py (prefilter_paste):
	Add support for pasting not only lines that start with '>>>', but
	also with ' >>>'.  That is, arbitrary whitespace can now precede
	the prompts.  This makes the system useful for pasting doctests
	from docstrings back into a normal session.

2007-08-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellEmbed.__call__): fix bug introduced in
	r1357, which had killed multiple invocations of an embedded